# chatLMT

./: LICENSE  README.md  agent.py  app.py  chat_history.db  lmt.db  main.py  mcpForeign.py  mcpLocal.py  pyproject.toml  random_functions.py  requirements.txt  test.ipynb
static/scripts/: main.js
static/style/: main.css
templates/: index.html  layout.html  login.html  signup.html  signupError.html
