[project]
name = "chatlmt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cs50>=9.4.0",
    "flask-session>=0.8.0",
    "flask[async]>=3.1.2",
    "httpx>=0.28.1",
    "langchain>=1.2.3",
    "langchain-groq>=1.1.1",
    "langchain-mcp-adapters>=0.2.1",
    "langchain-tavily>=0.2.16",
    "langgraph>=1.0.6",
    "mcp>=1.25.0",
    "watchdog>=6.0.0",
]
